<resources>
    <string name="app_name">智能消火栓</string>
    <string name="zero_zero_zero_zero_zero_zero_zero_zero">00000000</string>
    <string name="dialog_loading">数据加载中……</string>
    <string name="click_again_exit">再按一次退出程序</string>
    <string name="date">%1$s</string>

    <string name="open_gps">请先打开GPS，提高定位准确度</string>
    <string name="confirm">确定</string>
    <string name="fail_find_version">未找到版本号</string>

    <string name="input_phoneNumber">输入手机号</string>
    <string name="input_password">输入密码</string>
    <string name="InputPassword">输入密码（6&#8211;20位）</string>
    <string name="ConfirmPassword">确认密码（6&#8211;20位）</string>
    <string name="ForgetPassword">忘记密码</string>
    <string name="NewUserRegister">新用户注册</string>
    <string name="SMSVerificationCode">短信验证码</string>
    <string name="GetVerificationCode">获取验证码</string>
    <string name="HaveAccount">已有账号</string>
    <string name="ReadRegisterProtocol">我已阅读并同意《用户注册协议》</string>
    <string name="UseSocialAccount">使用社交账号登录</string>
    <string name="Login">登&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;陆</string>
    <string name="register">注&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;册</string>
    <string name="RegistrationProtocol">用户注册协议</string>

    <string name="AccountSettings">账号设置</string>
    <string name="MainAccount">主账号设置</string>
    <string name="SubAccount">子账号设置</string>
    <string name="HydrantAccount">消火栓账号</string>
    <string name="BindSocialAccount">绑定社交账号</string>
    <string name="WaterUsingSearch">用水查询</string>
    <string name="MapAndNavigation">地图与导航</string>
    <string name="MapZoomLevel">地图默认缩放级别</string>
    <string name="NavigationApp">默认导航软件</string>
    <string name="HistoricalRecord">历史用水记录</string>
    <string name="WaterConsumption">查看用水统计</string>
    <string name="PersonalizedSettings">个性化设置</string>
    <string name="ShowLogoPage">显示引导页面</string>
    <string name="ClearCache">缓存清理</string>
    <string name="Calculating">正在计算</string>
    <string name="Language">多语言</string>
    <string name="VersionAndShare">版本与分享</string>
    <string name="VersionView">版本查看</string>
    <string name="VersionUpdate">版本更新</string>
    <string name="PreviewVersion">获取预览版本</string>
    <string name="Share">分享给好友</string>
    <string name="FeedbackAndAdvice">反馈与建议</string>
    <string name="ContactUs">联系我们</string>
    <string name="Logout">退出登录</string>

    <string name="ProfilePhoto">头像</string>
    <string name="Account">账户名</string>
    <string name="Nickname">昵称</string>
    <string name="ChangePassword">密码修改</string>
    <string name="UnitsAndPositions">单位和职务</string>
    <string name="IdentityVerification">实名认证信息</string>
    <string name="Certified">已认证</string>
    <string name="InReview">审核中</string>

    <string name="camera_pop_camera">相机拍摄</string>
    <string name="camera_pop_album">从相册选取</string>
    <string name="camera_pop_cancel">取消</string>

    <string name="label_ok">确定</string>
    <string name="permission_title_rationale">权限需求</string>
    <string name="permission_read_storage_rationale">选择图片时需要读取权限</string>
    <string name="permission_write_storage_rationale">拍照时需要存储权限</string>

    <string name="Company">单位</string>
    <string name="Position">职务</string>
    <string name="SaveInformation">保存信息</string>

    <string name="versionCode">当前版本号:</string>
    <string name="example_versionCode">V1.0</string>
    <string name="latest_data">最新数据</string>

    <string name="ChangeNickname">修改昵称</string>
    <string name="TypeInNickname">请输入昵称</string>
    <string name="ConfirmModification">确认修改</string>

    <string name="OldPassword">请输入旧密码</string>
    <string name="NewPassword">请输入新密码（6&#8211;20位）</string>
    <string name="ConfirmNewPassword">请再次输入新密码（6&#8211;20位）</string>
    <string name="RetrievePassword">找回密码</string>
    <string name="CanNotGetTheVerificationCode">获取不到验证码？</string>
    <string name="resend_info_time">重新发送(%ds)</string>
    <string name="Confirm">确 认</string>

    <string name="SmartWaterSupply">智慧水务平台</string>
    <string name="InputServerHost">请输入域名或服务器IP地址</string>
    <string name="InputHttpPort">请输入Http端口号</string>
    <string name="InputSocketPort">请输入Socket端口号</string>
    <string name="InputWebSocketPort">请输入WebSocket端口号</string>
    <string name="InputServiceName">请输入服务名</string>
    <string name="InputUsername">请输入用户名</string>
    <string name="InputPassword2">请输入密码</string>

    <string name="update_version">版本升级（%1$s）</string>
    <string name="update_version2">%1$s（%2$s）</string>
    <string name="file_size_m">%1$sM</string>
    <string name="versionType_stable">正式版</string>
    <string name="versionType_preview">预览版</string>

    <string name="dialog_save">保&#160;&#160;&#160;&#160;存</string>
    <string name="dialog_clear">清&#160;&#160;&#160;&#160;空</string>
    <string name="dialog_cancel">取&#160;&#160;&#160;&#160;消</string>
    <string name="dialog_ok">确&#160;&#160;&#160;&#160;定</string>
    <string name="dialog_input_continue">继&#160;&#160;&#160;&#160;续</string>

    <string name="scan_failed">扫描失败</string>
    <string name="loading">加载中…</string>
    <string name="exampleConsumption">%1$sm³</string>
    <string name="exampleFlowRate">%1$sm³/h</string>
    <string name="EnterSearchContent">请输入搜索内容</string>
    <string name="RecentSearchRecord">最近搜索记录</string>
    <string name="warning_delete_history">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;您将删除该条搜索记录，是否继续删除？</string>
    <string name="warning_delete_history_all">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;您将删除所有历史搜索记录，是否继续删除？</string>

    <string name="waterCompanyName">waterCompanyName</string>

    <string name="notification_open_notification">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;因为系统限制，您需要手动授予通知权限，不授予权限将影响软件的正常使用，是否前往设置页面打开？</string>
    <string name="reminder_metter">友情提示</string>
    <string name="warning_redownload">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;您已经下载过该版本文件，是否直接安装？</string>

    <string name="contact">联系电话:+86 025&#8211;86981981 86981982\n联系地址:江苏省南京市滨江经济开发区喜燕路5号\n版权所有 © 迈拓仪表股份有限公司 2018</string>
</resources>
