<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_slight"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <View
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="?attr/colorPrimary" />

    <cn.njmeter.intelligenthydrant.widget.MyToolbar
        android:id="@+id/set_password_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        app:titleText="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/textfield_normal"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_oldPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/OldPassword"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="20"
            android:padding="@dimen/dp_10"
            android:textSize="@dimen/sp_18" />

        <ImageView
            android:id="@+id/iv_showOldPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:padding="@dimen/dp_5"
            android:src="@drawable/invisible_gray" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/textfield_normal"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_newPassword1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/NewPassword"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="20"
            android:padding="@dimen/dp_10"
            android:textSize="@dimen/sp_18" />

        <ImageView
            android:id="@+id/iv_showNewPassword1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:padding="@dimen/dp_5"
            android:src="@drawable/invisible_gray" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/textfield_normal"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_newPassword2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/ConfirmNewPassword"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="20"
            android:padding="@dimen/dp_10"
            android:textSize="@dimen/sp_18" />

        <ImageView
            android:id="@+id/iv_showNewPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:padding="@dimen/dp_5"
            android:src="@drawable/invisible_gray" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10">

        <TextView
            android:id="@+id/tv_forgetPassword_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:padding="@dimen/dp_5"
            android:text="@string/ForgetPassword"
            android:textSize="@dimen/sp_16" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_modify"
        style="@style/button_common_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:enabled="false"
        android:text="@string/ConfirmModification"
        android:textAllCaps="false"
        android:textColor="@color/white_alpha"
        android:textSize="@dimen/sp_20" />
</LinearLayout>
