<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <cn.njmeter.intelligenthydrant.widget.MyToolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        app:titleText="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_5"
        android:paddingTop="@dimen/dp_5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="@dimen/dp_10"
            android:text="@string/ProfilePhoto"
            android:textSize="@dimen/sp_18" />

        <com.pkmmte.view.CircularImageView
            android:id="@+id/iv_userIcon"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:scaleType="centerInside"
            android:src="@drawable/user_icon"
            app:border="true"
            app:border_color="#16F5F5F5"
            app:border_width="@dimen/dp_2"
            app:layout_collapseMode="parallax"
            app:layout_collapseParallaxMultiplier="-1"
            app:selector="true"
            app:selector_color="#4D000000"
            app:selector_stroke_color="#16F5F5F5"
            app:selector_stroke_width="@dimen/dp_4"
            app:shadow="false" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gray_slight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_5"
        android:paddingTop="@dimen/dp_5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="@dimen/dp_10"
            android:text="@string/Account"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/tv_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/dp_10"
            android:text="15151865258"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gray_slight" />

    <LinearLayout
        android:id="@+id/ll_nickName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_5"
        android:paddingTop="@dimen/dp_5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="@dimen/dp_10"
            android:text="@string/Nickname"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/tv_nickName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableEnd="@mipmap/ic_arrow_right"
            android:drawablePadding="@dimen/dp_5"
            android:drawableRight="@mipmap/ic_arrow_right"
            android:padding="@dimen/dp_10"
            android:text="门捷亮夫"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gray_slight" />

    <LinearLayout
        android:id="@+id/ll_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_5"
        android:paddingTop="@dimen/dp_5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableEnd="@mipmap/ic_arrow_right"
            android:drawableRight="@mipmap/ic_arrow_right"
            android:padding="@dimen/dp_10"
            android:text="@string/ChangePassword"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gray_slight" />

    <LinearLayout
        android:id="@+id/ll_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_5"
        android:paddingTop="@dimen/dp_5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableEnd="@mipmap/ic_arrow_right"
            android:drawableRight="@mipmap/ic_arrow_right"
            android:padding="@dimen/dp_10"
            android:text="@string/UnitsAndPositions"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gray_slight" />
</LinearLayout>
