<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_200"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <cn.njmeter.intelligenthydrant.widget.MyToolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        app:titleText="@string/app_name" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_20">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/SmartWaterSupply"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_20" />

                <ImageView
                    android:id="@+id/iv_configuration_energyManager"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@null"
                    android:src="@mipmap/server" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/border_white">

                <EditText
                    android:id="@+id/et_serverHost_energyManager"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/InputServerHost"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="@dimen/dp_10" />

                <ImageView
                    android:id="@+id/iv_deleteIP_energyManager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/dp_5"
                    android:contentDescription="@null"
                    android:src="@drawable/delete_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@drawable/border_white">

                <EditText
                    android:id="@+id/et_httpPort_energyManager"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:digits="0123456789"
                    android:hint="@string/InputHttpPort"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="5"
                    android:padding="@dimen/dp_10" />

                <ImageView
                    android:id="@+id/iv_deleteHttpPort_energyManager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/dp_5"
                    android:contentDescription="@null"
                    android:src="@drawable/delete_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@drawable/border_white">

                <EditText
                    android:id="@+id/et_socketPort_energyManager"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:digits="0123456789"
                    android:hint="@string/InputSocketPort"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="5"
                    android:padding="@dimen/dp_10" />

                <ImageView
                    android:id="@+id/iv_deleteSocketPort_energyManager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/dp_5"
                    android:contentDescription="@null"
                    android:src="@drawable/delete_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@drawable/border_white">

                <EditText
                    android:id="@+id/et_webSocketPort_energyManager"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:digits="0123456789"
                    android:hint="@string/InputWebSocketPort"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="5"
                    android:padding="@dimen/dp_10" />

                <ImageView
                    android:id="@+id/iv_deleteWebSocketPort_energyManager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/dp_5"
                    android:contentDescription="@null"
                    android:src="@drawable/delete_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@drawable/border_white">

                <EditText
                    android:id="@+id/et_serviceName_energyManager"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/InputServiceName"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/dp_10" />

                <ImageView
                    android:id="@+id/iv_deleteServiceName_energyManager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/dp_5"
                    android:contentDescription="@null"
                    android:src="@drawable/delete_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@drawable/border_white">

                <EditText
                    android:id="@+id/et_userName_energyManager"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/InputUsername"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/dp_10" />

                <ImageView
                    android:id="@+id/iv_deleteName_energyManager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/dp_5"
                    android:contentDescription="@null"
                    android:src="@drawable/delete_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@drawable/border_white"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_passWord_energyManager"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/InputPassword2"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="@dimen/dp_10" />

                <ImageView
                    android:id="@+id/iv_invisible_energyManager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/dp_5"
                    android:contentDescription="@null"
                    android:src="@drawable/invisible_gray" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
